--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         
         
         <div class="title-contributor">
-            <img src="ASSET_TITLE_CONTTRIBUTOR.png" alt="Contributors Title">
+            <img src="./contributer.png" alt="Contributors Title">
 
         </div>
         <!-- ... (remaining code) ... -->
