--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,7 +46,7 @@
                         <div class="calculator_nav">
                             <span>Number of Bands</span>
                             <ul class="nav-links">
-                                <li class="3 Bands"><a href="#">3 Bands</a></li>
+                                <li class="3 Bands"><a href="index.html">3 Bands</a></li>
                                 <li class="4 Bands"><a href="4Bands.html">4 Bands</a></li>
                                 <li class="5 Bands"><a href="5Bands.html">5 Bands</a></li>
                                 <li class="6 Bands"><a href="6Bands.html">6 Bands</a></li>
@@ -113,7 +113,7 @@
                             <button class="Result" role="button">Result</button>
                         </div>
                     </div> 
-                    <img class="resistor" src="assets/Resistor.png" alt="resistor">  
+                    <img class="resistor" src="assets/3resistor.png" alt="resistor">  
                 </div>
                 <div id="about" class="about">
                     <div class="header-container">
@@ -148,11 +148,11 @@
         <footer id="footer" class="footer">
             <div class="logo_links">
                 <div>
-                    <a href=""><img src="assets/logo/github.png"></a>
+                    <a href="https://github.com/akhimverona/Resistor-Calculator/tree/main"><img src="assets/logo/github.png"></a>
                     <a href=""><img src="assets/logo/acrobat.png"></a>
                     <a href=""><img src="assets/logo/codeshare.png"></a>
                     <a href=""><img src="assets/logo/linkedin.png"></a>
-                    <a href=""><img src="assets/logo/gdrive.png"></a>
+                    <a href="https://drive.google.com/drive/folders/1eB2kSnHf2z424J_TQoB0g3146j0j89Aw?usp=sharing"><img src="assets/logo/gdrive.png"></a>
                     <a href=""><img src="assets/logo/gmail.png"></a>
                     <a href=""><img src="assets/logo/discord.png"></a>
                 </div>
@@ -167,7 +167,7 @@
                             GITHUB
                         </span>
                         <span class="f_cont">
-                            <a href="">Resistorify</a>
+                            <a href="https://github.com/akhimverona/Resistor-Calculator/tree/main">Resistorify</a>
                         </span>
                         
                         <span class="f_subt">
@@ -210,16 +210,16 @@
                             LINKEDIN
                         </span>
                         <span class="f_cont">
-                            <a href="">Mikyla Angala</a>
-                            <a href="">Angela Khim Verona</a>
+                            <a href="https://www.linkedin.com/in/mikyla-angala-b75440294/">Mikyla Angala</a>
+                            <a href="https://www.linkedin.com/in/angela-khim-verona-876570293/">Angela Khim Verona</a>
                         </span>
                         
                         <span class="f_subt">
                             GITHUB
                         </span>
                         <span class="f_cont">
-                            <a href="">eimikiii</a>
-                            <a href="">akhimverona</a>
+                            <a href="https://github.com/eimikiii">eimikiii</a>
+                            <a href="https://github.com/akhimverona">akhimverona</a>
                         </span>
                     </div>
                     <div class="foot2-2">
