--- a/4Bands.html
+++ b/4Bands.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -133,7 +128,7 @@
                             <button class="Result" role="button">Result</button>
                         </div>
                     </div> 
-                    <img class="resistor" src="assets/Resistor.png" alt="resistor">  
+                    <img class="resistor" src="assets/3resistor.png" alt="resistor">  
                 </div>
                 <div id="about" class="about">
                     <div class="header-container">
@@ -230,16 +225,16 @@
                             LINKEDIN
                         </span>
                         <span class="f_cont">
-                            <a href="">Mikyla Angala</a>
-                            <a href="">Angela Khim Verona</a>
+                            <a href="https://www.linkedin.com/in/mikyla-angala-b75440294/">Mikyla Angala</a>
+                            <a href="https://www.linkedin.com/in/angela-khim-verona-876570293/">Angela Khim Verona</a>
                         </span>
                         
                         <span class="f_subt">
                             GITHUB
                         </span>
                         <span class="f_cont">
-                            <a href="">eimikiii</a>
-                            <a href="">akhimverona</a>
+                            <a href="https://github.com/eimikiii">eimikiii</a>
+                            <a href="https://github.com/akhimverona">akhimverona</a>
                         </span>
                     </div>
                     <div class="foot2-2">
